2008-03-03	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* italc.spec.in:
	added missing library

	* setup/resources/pl.qm:
	* setup/resources/qt_pl.qm:
	* setup/resources/pl.ts:
	* ima/resources/pl.qm:
	* ima/resources/qt_pl.qm:
	* ima/resources/pl.ts:
	fixes in Polish localization-files by
	Robert Radko <robert/at/radko/dot/pl>

2008-02-26	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* ica/src/local_system_ica.cpp:
	* lib/include/local_system.h:
	* lib/src/local_system.cpp:
	moved powerDown(), reboot() and logoffUser() to local_system_ica.cpp
	and made those functions work when no user is logged on under Linux

	* lib/src/vncview.cpp:
	- fixed mapFromFramebuffer()-method
	- fixed draw-position for cursor in scaled mode

	* ica/src/demo_client.cpp:
	* ima/src/remote_control_widget.cpp:
	* lib/include/vncview.h:
	* lib/src/vncview.cpp:
	made progress-widget optional - do not use when remote-controlling to
	speed things up

	* ima/src/remote_control_widget.cpp:
	scale logo (which is now rendered larger) to fit into toolbar

	* lib/src/ivs_connection.cpp:
	directly use fastQImage::scaleTo(...) rather than
	fastQImage::scaled(...) to avoid creating temporary images

	* lib/src/fast_qimage.cpp:
	check for format() == Format_Invalid and handle properly

	* lib/include/fast_qimage.h:
	* lib/src/fast_qimage.cpp:
	in fastQImage::scaleTo(...) return reference to destination image for
	convenience

2008-02-25	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* ica/ica.qrc:
	* ica/resources/pl.qm:
	* ica/resources/pl.ts:
	* setup/setup.qrc:
	* setup/resources/pl.qm:
	* setup/resources/pl.ts:
	* ima/italc.qrc:
	* ima/resources/pl.qm:
	* ima/resources/pl.ts:
	* lib/italc_core.qrc:
	* lib/resources/pl.qm:
	* lib/resources/pl.ts:
	added Polish localization-files by Robert Radko <robert/at/radko/dot/pl>

	* ima/src/client.cpp:
	less transparency

2008-02-25	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>
